coupon added and edited and removed in admin side

--- a/views/adminView/adminHeader.ejs
+++ b/views/adminView/adminHeader.ejs
@@ -57,11 +57,11 @@
                         <span class="text">Orders</span>
                     </a>
                 </li>
-                <!-- <li class="menu-item">
-                    <a class="menu-link" href="page-form-product-1.html"> <i class="icon material-icons md-local_activity"></i>
+                <li class="menu-item">
+                    <a class="menu-link" href="./coupon"> <i class="icon material-icons md-local_activity"></i>
                         <span class="text">Coupon</span>
                     </a>
-                </li> -->
+                </li>
                 <!-- <li class="menu-item">
                     <a class="menu-link" href="./offers"> <i class="icon material-icons md-check_circle"></i>
                         <span class="text">Offers</span>
