--- a/views/userView/cart.ejs
+++ b/views/userView/cart.ejs
@@ -149,19 +149,19 @@
                 <% } %>
             </table>
         </div>
-        <!-- <div class="cart-btn">
+        <div class="cart-btn">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-5">
                     <div class="coupon-input">
                         <input type="text" placeholder="Enter cupone code">
                     </div>
                 </div>
-                <div class="col-lg-5 offset-lg-1 text-left text-lg-right">
-                    <div class="site-btn clear-btn">Clear Cart</div>
-                    <div class="site-btn update-btn">Update Cart</div>
+                <div class="col-lg-6 offset-lg-1 text-left text-lg-right">
+                    <a href="" class="site-btn clear-btn">Add Cupone</a>
+                    <a href="" class="site-btn clear-btn">Remove Cupone</a>
                 </div>
             </div>
-        </div> -->
+        </div>
     </div>
     <div class="shopping-method">
         <div class="container">
