--- a/views/userView/userPayment.ejs
+++ b/views/userView/userPayment.ejs
@@ -24,6 +24,16 @@
     <link rel="stylesheet" href="/css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="/css/style.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <style>
+           .applyCoupon {
+            visibility: visible;
+        }
+
+        .removeCoupon {
+            visibility: hidden;
+        }
+
+    </style>
     
 </head>
 
@@ -72,21 +82,22 @@
                                     <div class="mb-4">
                                         <h4>Shipping Address:</h4><%= address.firstname %>,<br> <%= address.housename %>, <%= address.city %>, <%= address.state %>, <%= address.pincode %><br><%= address.country %></p>
                                     </div>
-                                    
-                                    <!-- <div style="margin-left: 30%;">
+                                    <div style="margin-left: 30%;">
 
                                         <div class="input-group">
-                                            <span class="input-group-text">Enter Coupon Code</span>
-                                            <input type="text" aria-label="First name" class="form-control"
+                                            <input type="text" placeholder="Enter coupon code" class="form-control"
                                                 name="coupon" id="couponCode">
-                                            <button onclick="checkCoupon()" class="btn btn-warning applyCoupon"
+                                            <button onclick="checkCoupon()" class="btn btn-secondary applyCoupon"
                                                 id="applyCoupons">Apply</button>
-                                            <button onclick="removeCoupon()"
-                                                class="btn btn-warning removeCoupon"
-                                                id="removeCoupons">Remove</button>
+                                                <button onclick="removeCoupon()"
+                                                    class="btn btn-secondary removeCoupon"
+                                                    id="removeCoupons">Remove</button>
+                                                    
                                         </div>
                                         <br>
-                                        <div class="input-group">
+                                                    <h6 style="color: red; margin-left: 20px;" id="couponmsg"></h6>
+                                        <br>
+                                        <!-- <div class="input-group">
                                             <span class="input-group-text">Wallet Amount</span>
 
                                             <input type="text" aria-label="First name" class="form-control"
@@ -98,9 +109,9 @@
                                             <button onclick="removeWallet()"
                                                 class="btn btn-warning removeWallet"
                                                 id="removeWallet">Remove</button>
-                                        </div>
+                                        </div> -->
 
-                                    </div> -->
+                                    </div>
                                 </div>
 
                                 <h4>Product Details</h4>
@@ -134,18 +145,20 @@
                                 </table>
                                 <hr>
                                 <div style="padding-left: 60%;">
-
-                                    <h6 style="padding-left: 45%;" id="price">₹ <%= totalPrice %></h6>
-                                    <!-- <h5 id="applied" style="display: none;">Coupon Applied</h5> -->
+                                    <span id="price" hidden><%= totalPrice %></span>
+                                    <h6 style="padding-left: 45%;" >₹ <%= totalPrice %></h6>
+                                    <h5 id="applied" style="display: none;">Coupon Applied</h5>
+                                    
                                     <h6 style="margin-top: -7%;padding-left: 8%;display: none;" id="discountValue"></h6>
                                     <br>
                                     <!-- <h5 id="appliedWallet" style="display: none;">Wallet Applied</h5> -->
                                     <h6 style="margin-top: -6%;padding-left: 8%;display: none;" id="walletValue"></h6>
                                     <hr>
                                     <h5>Price</h5>
-                                    <h6 style="margin-top: -6%;padding-left: 45%;" id="totalAmount">₹ <%= totalPrice %></h6>
+                                    <h6 style="margin-top: 3%; padding-left: 41%;">₹</h6><h6 style="margin-top: -6%;padding-left: 45%;" id="totalAmount"><%= totalPrice %></h6>
 
                                 </div>
+                                
 
                                 <div class="mt-3">
                                     <!-- Payment buttons -->
@@ -265,6 +278,105 @@
         <script src="/js/main.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+
+    <script>
+
+
+function checkCoupon(event) {
+
+//const coupon = $('#couponCode').val();
+const coupon = document.getElementById('couponCode').value
+const amount = document.getElementById('price').innerText
+console.log(amount)
+console.log(coupon)
+
+// Make the AJAX request
+$.ajax({
+    url: '/couponCheck',
+    type: 'POST',
+    data: {
+        coupon: coupon,
+        amount: amount
+    },
+    dataType: 'json',
+    success: function (res) {
+        if (res.success) {
+            console.log(res)
+            const applied = document.getElementById('applied')
+            console.log(applied)
+            const appliedamount = document.getElementById('discountValue')
+            applied.style.display = 'inline'
+            appliedamount.style.display = 'inline'
+            
+            document.getElementById('discountValue').innerText = -res.discount 
+            document.getElementById('totalAmount').innerText = res.amount
+
+            const apply = document.getElementById('applyCoupons')
+            const remove = document.getElementById('removeCoupons')
+
+            remove.classList.remove('removeCoupon')
+            console.log(apply)
+            apply.classList.add('removeCoupon')
+
+            document.getElementById('couponmsg').innerHTML = `Coupon Applied Successfully`
+        } else {
+            document.getElementById('couponmsg').innerHTML = `${res.msg}`
+        }
+    },
+    error: function () {
+        alert('Error: Unable to communicate with the server');
+    }
+});
+}
+
+
+
+
+
+function removeCoupon() {
+            const coupon = document.getElementById('couponCode').value
+            const amount = document.getElementById('price').innerText
+            console.log(amount)
+            console.log(coupon)
+            console.log('removeCoupon() calleds')
+            $.ajax({
+                url: '/removeCoupon',
+                method: 'post',
+                data: {
+                    coupon: coupon,
+                    amount: amount
+                },
+                dataType: 'json',
+                success: function (res) {
+                    if (res.success) {
+                        console.log(res,'in the remove coupon code ')
+                        const applied = document.getElementById('applied')
+
+                        console.log(applied)
+                        const appliedamount = document.getElementById('discountValue')
+                        applied.style.display = 'none'
+                        appliedamount.style.display = 'none'
+                        document.getElementById('totalAmount').innerText = res.amount
+
+                        const apply = document.getElementById('applyCoupons')
+                        const remove = document.getElementById('removeCoupons')
+
+                        remove.classList.add('removeCoupon')
+                        console.log(apply)
+                        apply.classList.remove('removeCoupon')
+
+                        document.getElementById('couponmsg').innerHTML = `Coupon Removed Successfully`
+
+                    } else {
+                        alert('something went wrong!!!!!')
+                    }
+                }
+
+            })
+        }
+
+
+    </script>
     
     </body>
     
